# fat_volume_id

./: Cargo.toml  LICENSE-MIT  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_parse.rs  fuzz_target_parseid32.rs  fuzz_target_parseid64.rs
src/: common.rs  error.rs  fmt.rs  id32.rs  id64.rs  lib.rs  parser.rs
src/id32/: error.rs  fmt.rs  parser.rs  serde.rs
src/id64/: error.rs  fmt.rs  parser.rs  serde.rs
