[package]
authors = ["rysndavjd"]
categories = ["data-structures", "no-std", "parser-implementations"]
name = "fat_volume_id"
readme = "README.md"
version = "0.1.0"
edition = "2024"
include = ["src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
description = "A library to generate and parse Volume Identifiers in FAT12/16/32, exFAT and NTFS."
license = "Apache-2.0 OR MIT"

[dependencies]
borsh = { version = "1.6.0", default-features = false, optional = true }
borsh-derive = { version = "1.6.0", default-features = false, optional = true }
zerocopy = { version = "0.8.33", default-features = false, features = [
    "derive",
], optional = true }

[features]
default = ["id32", "id64", "std"]
std = ["borsh/std", "zerocopy/std", "alloc"]
alloc = []
zerocopy = ["dep:zerocopy"]
borsh = ["dep:borsh", "dep:borsh-derive"]
id32 = []
id64 = []
